fixing image flickering

--- a/frontend/src/sass/layout/_body.scss
+++ b/frontend/src/sass/layout/_body.scss
@@ -1,4 +1,4 @@
 body {
-    background-image: url('./assets/pattern__seamless__light.png');
+    // background-image: url('./assets/pattern__seamless__light.png');
     background-size: 40%;
 }
