--- a/frontend/src/sass/theme/_dark.scss
+++ b/frontend/src/sass/theme/_dark.scss
@@ -3,6 +3,7 @@
 
 body {
     &.dark {
+        background-image: url('./assets/pattern__seamless__dark.png');
         &::-webkit-scrollbar {
             width: f.rem(11);
         }
